logic complete, adding style

--- a/index.html
+++ b/index.html
@@ -17,19 +17,15 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2">
+            <div id="left-column">
                 <div>
-                    <input class="form-control form-control-lg" type="text" placeholder="what do you want?">
-                    <button class="btn btn-lg btn-success" id="magic-maker">bring me my gif</button>
+                    <input class="form-control form-control-lg" type="text" placeholder="what do you want?" id="topic">
+                    <button class="btn btn-lg btn-success" id="magic-maker">make my gif button</button>
                 </div>
                 <div id="buttonville">
-                    <button class="btn btn-sm btn-dark giphy-button" data-subject="keanu reeves">Keanu</button>
-                    <button class="btn btn-sm btn-dark giphy-button" data-subject="tim and eric">Abso Lutely</button>
                 </div>
             </div>
-            <div class="col-md-10">
-                <div id="gif-catcher">
-                </div>
+            <div class="col-md-12" id="gif-catcher">
             </div>
         </div>
     </div>
