Deployable homework. Needs to be scrubbed.

--- a/index.html
+++ b/index.html
@@ -15,19 +15,17 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div id="left-column">
-                <div>
-                    <input class="form-control form-control-lg" type="text" placeholder="what do you want?" id="topic">
-                    <button class="btn btn-lg btn-success" id="magic-maker">make my gif button</button>
-                </div>
-                <div id="buttonville">
-                </div>
-            </div>
-            <div class="col-md-12" id="gif-catcher">
-            </div>
+    <div id="left-column">
+        <div>
+            <form>
+                <input class="form-control form-control-lg" type="text" placeholder="what kinda gifs you want?" id="topic">
+                <input class="btn btn-lg btn-success" id="magic-maker" value="make my gif button">
+            </form>
         </div>
+        <div id="buttonville">
+        </div>
+    </div>
+    <div id="gif-catcher">
     </div>
 </body>
 
