fixed submit bug (ENTER keystroke would not activate event listener); begin mobile screen optimization

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
             <form>
                 <input class="form-control form-control-lg" type="text" placeholder="what kinda gifs you want?" id="topic">
-                <input class="btn btn-lg btn-success" id="magic-maker" value="make my gif button">
+                <input class="btn btn-lg btn-success" type="submit" id="magic-maker" value="make my gif button">
             </form>
         </div>
         <div id="buttonville">
